padronização de responses do projeto
